# opencl_playground

./: .gitignore  CMakeLists.txt  README.md  README_web.md
docker/: Dockerfile  readme.md
docker/older/: Dockerfile  readme.md
include/opencl_playground/: myocl.hpp
src/: compute_pi.cl  compute_pi.cpp  matrix_mul.cl  matrix_mul.cpp  myocl.cpp  triangle_area.cl  triangle_area.cpp  vector_add.cl  vector_add.cpp
